Potential fix for overscroll navigation on iOS Chrome.

--- a/css/stroll.css
+++ b/css/stroll.css
@@ -1,5 +1,6 @@
 html, body {
     position: fixed;
+    overscroll-behavior: contain;
 }
 
 #stroll {
